# gong

./: CMakeLists.txt  go.mod  vcpkg.json
.cache/clangd/index/: local_storage.cpp.A7A4768F237F2560.idx  storage_provider.cpp.9A5D94AB5C804698.idx
cmd/cli/: main.go
cpp/: CMakeLists.txt  Makefile
cpp/include/gong/common/: result.hpp  types.hpp
cpp/include/gong/storage/: local_storage.hpp  storage_provider.hpp
cpp/src/storage/: local_storage.cpp
internal/config/: config.go  parser.go
tests/: CMakeLists.txt  test_local_storage.cpp
